rename to ScriptableThings

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=ProgrammableThings
+name=ScriptableThings
 version=0.1.0
 author=Rob Anderson
 maintainer=Rob Anderson <rob@andrsn.uk>
-sentence=Reconfigurable stuff on microcontrollers
+sentence=Empower things with scripts
 paragraph=
 category=Uncategorized
-url=https://github.com/robb-j/ProgrammableThings
+url=https://github.com/digitalinteraction/ScriptableThings
 architectures=esp32,esp8266
